@@ -1,5 +1,13 @@
 2003-11-28  Richard Henderson  <rth@redhat.com>
 
+	* gimplify.c (create_tmp_var_raw): Split out from create_tmp_var.
+	(create_tmp_var): Use it.
+	(create_tmp_alias_var): Remove.
+	* tree-alias-common.c, tree-dfa.c: Use create_tmp_var_raw instead.
+	* tree-simple.h: Update decls.
+
+2003-11-28  Richard Henderson  <rth@redhat.com>
+
 	* gimple-low.c (lower_function_body): Call lower_bind_expr
 	to handle the outermost BIND_EXPR.
 
