@@ -100,39 +100,7 @@ remove_suffix (char *name, int len)
 tree
 gfc_create_var_np (tree type, const char *prefix)
 {
-  static unsigned int id_num = 1;
-  char *tmp_name;
-  char *preftmp = NULL;
-  tree tmp_var;
-
-  /* Figure out a name for the variable.  */
-  if (prefix)
-    {
-      preftmp = ASTRDUP (prefix);
-      remove_suffix (preftmp, strlen (preftmp));
-      prefix = preftmp;
-    }
-  ASM_FORMAT_PRIVATE_NAME (tmp_name, (prefix ? prefix : "V"), id_num++);
-
-  /* Make the type of the variable writable.  */
-  type = build_type_variant (type, 0, 0);
-
-  /* Build the VAR_DECL variable declaration node.  */
-  tmp_var = build_decl (VAR_DECL, get_identifier (tmp_name), type);
-
-  /* The variable was declared by the compiler.  */
-  DECL_ARTIFICIAL (tmp_var) = 1;
-
-  /* Make the variable writable.  */
-  TREE_READONLY (tmp_var) = 0;
-
-  /* The variable is local, and we assume that it was not
-     created without purpose.  */
-  DECL_EXTERNAL (tmp_var) = 0;
-  TREE_STATIC (tmp_var) = 0;
-  TREE_USED (tmp_var) = 1;
-
-  return tmp_var;
+  return create_tmp_var_raw (type, prefix);
 }
 
 
