@@ -25,8 +25,8 @@ Boston, MA 02111-1307, USA.  */
 
 #include "tree-iterator.h"
 
+extern tree create_tmp_var_raw (tree, const char *);
 extern tree create_tmp_var (tree, const char *);
-extern tree create_tmp_alias_var (tree, const char *);
 extern bool is_gimple_tmp_var (tree);
 extern tree get_initialized_tmp_var (tree, tree *, tree *);
 extern tree get_formal_tmp_var (tree, tree *);
